--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ copyright:
   type_title:	Algunos derechos reservados
   type_url:	http://creativecommons.org/licenses/by-nc/2.5
 
-# Google Analytics (add the UA Code, e.g.: UA-xxxxxxxx-1)
+gems:
+  - jekyll-gist
 
+# Google Analytics (add the UA Code, e.g.: UA-xxxxxxxx-1)
 google_analytics: UA-70101251-1
