--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,9 @@ baseURL = "https://pazthor.github.io/"
 languageCode = "en-us"
 title = "Pazthor Blog"
 theme = "paztheme"
-paginate = 10
+[pagination]
+  pagerSize = 10
+
 publishDir = "public"
 enableGitInfo = true
 
