--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hugo-theme-console"]
-	path = hugo-theme-console
+[submodule "themes/hugo-theme-console"]
+	path = themes/hugo-theme-console
 	url = https://github.com/mrmierzejewski/hugo-theme-console.git
